// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should serialize a complex schema 1`] = `
Object {
  "properties": Object {
    "array": Object {
      "items": Object {
        "type": "string",
      },
      "maxItems": 3,
      "type": "array",
    },
    "dateString": Object {
      "description": "My date string",
      "format": "date-time",
      "type": "string",
    },
    "discriminatedUnion": Object {
      "oneOf": Array [
        Object {
          "properties": Object {
            "age": Object {
              "type": "number",
            },
            "name": Object {
              "enum": Array [
                "vasya",
              ],
              "type": "string",
            },
          },
          "required": Array [
            "name",
            "age",
          ],
          "type": "object",
        },
        Object {
          "properties": Object {
            "age": Object {
              "type": "number",
            },
            "name": Object {
              "enum": Array [
                "petya",
              ],
              "type": "string",
            },
          },
          "required": Array [
            "name",
            "age",
          ],
          "type": "object",
        },
      ],
    },
    "enumDefault": Object {
      "default": "buy-it-now",
      "enum": Array [
        "buy-it-now",
        "auctions",
      ],
      "type": "string",
    },
    "literalBoolean": Object {
      "type": "boolean",
    },
    "literalNumber": Object {
      "maximum": 123,
      "minimum": 123,
      "type": "number",
    },
    "literalString": Object {
      "enum": Array [
        "123",
      ],
      "type": "string",
    },
    "numberMinMax": Object {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "maximum": 10,
      "minimum": 3,
      "type": "number",
    },
    "numberMultipleOf": Object {
      "multipleOf": 10,
      "type": "number",
    },
    "objectNested": Object {
      "properties": Object {
        "uuid": Object {
          "format": "uuid",
          "type": "string",
        },
      },
      "required": Array [
        "uuid",
      ],
      "type": "object",
    },
    "password": Object {
      "format": "password",
      "pattern": "^.*$",
      "type": "string",
    },
    "passwordComplex": Object {
      "format": "password",
      "maxLength": 100,
      "minLength": 8,
      "pattern": "^(?:(?=.*\\\\d)(?=.*[A-Z]).*)$",
      "type": "string",
    },
    "record": Object {
      "additionalProperties": Object {
        "type": "number",
      },
      "type": "object",
    },
    "recordWithKeys": Object {
      "additionalProperties": Object {
        "type": "string",
      },
      "type": "object",
    },
    "stringMinMax": Object {
      "maxLength": 15,
      "minLength": 5,
      "type": "string",
    },
    "tuple": Object {
      "items": Object {
        "oneOf": Array [
          Object {
            "type": "string",
          },
          Object {
            "properties": Object {
              "name": Object {
                "enum": Array [
                  "Rudy",
                ],
                "type": "string",
              },
            },
            "required": Array [
              "name",
            ],
            "type": "object",
          },
          Object {
            "items": Object {
              "oneOf": Array [
                Object {
                  "enum": Array [
                    "blue",
                  ],
                  "type": "string",
                },
                Object {
                  "enum": Array [
                    "red",
                  ],
                  "type": "string",
                },
              ],
            },
            "type": "array",
          },
        ],
      },
      "type": "array",
    },
    "union": Object {
      "description": "Please choose topkek",
      "oneOf": Array [
        Object {
          "enum": Array [
            "kek",
          ],
          "type": "string",
        },
        Object {
          "enum": Array [
            "topkek",
          ],
          "type": "string",
        },
      ],
    },
    "zodDateString": Object {
      "format": "date-time",
      "type": "string",
    },
  },
  "required": Array [
    "stringMinMax",
    "numberMinMax",
    "numberMultipleOf",
    "tuple",
    "union",
    "discriminatedUnion",
    "literalString",
    "literalNumber",
    "literalBoolean",
    "array",
    "objectNested",
    "record",
    "recordWithKeys",
    "dateString",
    "zodDateString",
    "password",
    "passwordComplex",
  ],
  "type": "object",
}
`;

exports[`should serialize an intersection of objects 1`] = `
Object {
  "properties": Object {
    "one": Object {
      "type": "number",
    },
    "two": Object {
      "type": "number",
    },
  },
  "required": Array [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`should serialize an intersection of unions 1`] = `
Object {
  "oneOf": Array [
    Object {
      "enum": Array [
        "123",
      ],
      "type": "string",
    },
    Object {
      "type": "number",
    },
    Object {
      "type": "boolean",
    },
    Object {
      "items": Object {
        "type": "string",
      },
      "type": "array",
    },
  ],
}
`;

exports[`should serialize an intersection with overrided fields 1`] = `
Object {
  "properties": Object {
    "one": Object {
      "type": "string",
    },
  },
  "required": Array [
    "one",
  ],
  "type": "object",
}
`;
